tests/invalid_nodepend/unterminated_octal_escape.err_exp
unterminated_octal_escape.m:013: Error: predicate [38;5;87m`main'/2[39;49m [38;5;203mhas no clauses.[39;49m
unterminated_octal_escape.m:018: Syntax error: unterminated octal escape.
